# pythondev

./: .flake8  .pre-commit-config.yaml  .pytest.ini  Makefile  README.md  README_uv.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: makefile.yml
data/: create_dummy_files.py
src/: date_parser.py  formatter.py
tests/: __init__.py  test_date_parser.py  test_format_file_size.py
